# hello-there-ai-ops-workshop

./: .env.example  .gitattributes  .gitignore  CONFIGURATION.md  GUIDELINES.md  GUIDELINES_QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt
1-ai-fundamentals/: README.md
1-ai-fundamentals/data/: .gitkeep
1-ai-fundamentals/notebooks/: 01_introduction_to_decision_trees.ipynb
1-play-tennis/: Play Tennis  Implementation Using Sklearn Decision Tree Algorithm.ipynb  README.md
1-play-tennis/notebooks/: 01_introduction_to_decision_trees.ipynb
2-ai-rag/: README.md
2-ai-rag/data/: .gitkeep  synthetic-it-call-center-tickets-sample.csv
2-ai-rag/notebooks/: 00_data_ingestion.ipynb  01_introduction_to_rag.ipynb  01_simple_RAG_llama_stack_chromadb.ipynb  02_advanced_rag_with_multiple_fields.ipynb  02_multifield_RAG_llama_stack_chromadb.ipynb
2-reducing-mttd/: .gitignore  EMBEDDING_MODELS_COMPARISON.md  LLAMA_STACK_SETUP.md  PROJECT_STATUS.md  README.md  WORKFLOW.md  draft.md  requirements.txt
2-reducing-mttd/data/: .gitkeep  gt_close_notes.csv  gt_close_notes_with_coords.csv
2-reducing-mttd/notebooks/: 01_load_and_explore_dataset.ipynb  02_create_ground_truth.ipynb  02_prompt_experiments.ipynb  03_llm_eval_with_trustyai.ipynb  03_ngram_comparisons.ipynb  03_reference_based_evaluation.ipynb  04_semantics_analysis.ipynb  05_llm_as_judge_evaluation.ipynb
2-reducing-mttd/scripts/: start_llama_stack.sh
2-reducing-mttd/src/: __init__.py  evaluator.py  mlflow_tracking.py  prompts.py  utils.py
3-ai-evaluation/: README.md
3-ai-evaluation/notebooks/: 01_load_and_explore_dataset.ipynb  02_create_ground_truth.ipynb  03_ngram_comparisons.ipynb  04_semantics_analysis.ipynb  05_llm_as_judge_evaluation.ipynb
3-rag/: README.md
3-rag/notebooks/: 01_simple_RAG_llama_stack_chromadb.ipynb  02_multifield_RAG_llama_stack_chromadb.ipynb  03_fine_tune_dataset.ipynb  04_upload_fine_tune_model.ipynb  05_test_fine_tuned_model.ipynb
3-rag/src/: __init__.py
4-ai-agents/: README.md
4-ai-agents/notebooks/: 01_introduction_to_agents.ipynb  02_building_simple_agent.ipynb  03_llamastack_core_features.ipynb  04_mcp_tools.ipynb  05_multi_metric_evaluation.ipynb  05_safety_shields.ipynb
4-ai-agents/scripts/: setup-env.sh
4-ai-agents/src/: __init__.py  agent.py  config.py  memory.py  tools.py
4-predictive-analysis/: README.md
4-predictive-analysis/notebooks/: 02_upload_fine_tune_model.ipynb
4-predictive-analysis/src/: __init__.py
5-ai-fine-tuning/: README.md
5-ai-fine-tuning/notebooks/: 01_fine_tune_dataset.ipynb  03_test_fine_tuned_model.ipynb
5-autonomous-agents/: NOTEBOOK_PLAN.md  NOTEBOOK_STRUCTURE.md  README.md  requirements.txt  test_agent.py  test_comprehensive.py
5-autonomous-agents/notebooks/: 01_introduction_to_agents.ipynb  02_building_simple_agent.ipynb  03_llamastack_core_features.ipynb  04_mcp_tools.ipynb  04_multi_metric_evaluation.ipynb  05_safety_shields.ipynb  06_multi_metric_evaluation.ipynb
5-autonomous-agents/src/: agent.py  config.py  environment.py  mcp_terminal_server.py  tools.py
docs/: GUIDELINES.md  GUIDELINES_QUICK_REFERENCE.md
openshift/: README.md
openshift/docs/: 01-getting-started.md  02-prerequisites.md  03-llamastack-deployment.md  04-mongodb-mcp-setup.md  05-gpu-worker-nodes.md  06-mcp-integration.md  (+7 more)
scripts/: README.md  create-gpu-workers.sh  deploy-llamastack.sh  deploy-mongodb-mcp.sh  register-mongodb-mcp.sh  setup-env.sh  start_llama_stack.py
src/: __init__.py  config.py
(+19 files in other folders)
